--- a/Front-End/Fimple/Ödev 1/style.css
+++ b/Front-End/Fimple/Ödev 1/style.css
@@ -1,25 +1,29 @@
 .body {
+    background: #f0f1c7;
     display: flex;
     /*flex-direction: column;*/
     /*border: 5px solid green;*/
     justify-content: space-evenly;
     align-items: center;
     flex: 1;
-    height: 90vh;
+    height: 100vh;
 }
 
 .left {
     display: flex;
     flex-direction: column;
-    /*border: 5px solid yellow;*/
+    border: 5px solid yellow;
     /*height: 50vh;*/
+    /*min-height: 200px;*/
 }
 
 .right {
     display: flex;
-    /*border: 5px solid red;*/
+    border: 5px solid red;
     flex-direction: column;
     /*height: 50vh;*/
+    min-height: 50px;
+
 }
 
 table, th, td {
@@ -28,4 +32,8 @@ table, th, td {
 
 th {
     background-color: #864b4b;
+}
+
+s {
+    color: green;
 }
