--- a/Front-End/Fimple/Ödev 2/style.css
+++ b/Front-End/Fimple/Ödev 2/style.css
@@ -1,20 +1,59 @@
-.body {
-    border: 1px solid red;
-}
 .form {
-    border: 1px solid yellow;
     display: flex;
-    /*flex-direction: row;*/
     flex-flow: wrap;
-    /*align-content: center;*/
-    /*align-items: center;*/
-    /*justify-items: center;*/
     justify-content: center;
 }
 
 .card {
+    background: #616233;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
     border: 1px solid black;
+    border-radius: 3px;
     padding: 1px;
-    margin: 1px;
     max-width: calc(max(20vw, 100px));
+    margin: 3px;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+input {
+    width: 80vw;
+    height: 5vh;
+    text-align: center;
+    font-size: 40px;
+}
+
+.title {
+    width: 100%;
+    background: #f0f1c7;
+    font-weight: bold;
+    height: min(9vh, 400px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.body {
+    background: #bfc07f;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: max(25vh, 300px);
+}
+
+button {
+    width: 10vw;
+}
+
+button:hover {
+    background-color: #d3d333;
+    outline: #bfc07f;
+    border: #bfc07f;
 }
